--- a/index.html
+++ b/index.html
@@ -19,6 +19,13 @@
 
   gtag('config', 'UA-111521373-1');
 </script>
+<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<script>
+  (adsbygoogle = window.adsbygoogle || []).push({
+    google_ad_client: "ca-pub-9887824546153830",
+    enable_page_level_ads: true
+  });
+</script>
 
   </head>
   <body>
