--- a/index.html
+++ b/index.html
@@ -8,6 +8,15 @@
     enable_page_level_ads: true
   });
 </script>
+<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- add 1 -->
+<ins class="adsbygoogle"
+     style="display:inline-block;width:336px;height:280px"
+     data-ad-client="ca-pub-9887824546153830"
+     data-ad-slot="4078202854"></ins>
+<script>
+(adsbygoogle = window.adsbygoogle || []).push({});
+</script>
     <title>Hello, world!</title> </marquee>
 
 
