one option added
kolkata option added

--- a/index.html
+++ b/index.html
@@ -107,7 +107,8 @@
 <option value="Bangalore">Bangalore</option>
 <option value="Chennai">Pune</option>
 <option value="Bangalore">Mysore</option>
-<option value="Chennai">Chandigarh</option>
+<option value="Bangalore">Chandigarh</option>
+<option value="Chennai">kolkata</option>
  
 </select></td>
  
