php file deleted and html added
html extention edited

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
   <body>
    <marquee><h1>joob world</h1></marquee>
    
-    <form name="emp" action="hello.php" onsubmit="return validate_form();" method="post">
+    <form name="emp" action="hello.html" onsubmit="return validate_form();" method="post">
         <table align="center" width=40% width="100%" cellspacing="2" cellpadding="2" border="5">
             <tr>
                 <td colspan="2" align="center"><b>Employee Registration Form.</b></td>
