--- a/hello.html
+++ b/hello.html
@@ -15,7 +15,7 @@
     
   </head>
   <body>
-    <h1    style="background-color:green">Form Submit Successfully</h1>
+    <div><h1 style="background-color:green">Form Submit Successfully</h1></div>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
