--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <script>
 (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
-    <title>Hello, world!</title> </marquee>
+    <title>joobworld</title> </marquee>
 	    <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
