--- a/index.html
+++ b/index.html
@@ -68,6 +68,25 @@
  
         //-->
     </script>
+	
+	<p id="demo"></p>
+
+<script>
+var x = document.getElementById("demo");
+
+function getLocation() {
+    if (navigator.geolocation) {
+        navigator.geolocation.getCurrentPosition(showPosition);
+    } else { 
+        x.innerHTML = "Geolocation is not supported by this browser.";
+    }
+}
+
+function showPosition(position) {
+    x.innerHTML = "Latitude: " + position.coords.latitude + 
+    "<br>Longitude: " + position.coords.longitude;
+}
+</script>
 
 
   </head>
@@ -147,6 +166,9 @@
  
         </table>
     </form>
+	  <button onclick="getLocation()">get your position</button>
+
+<p id="demo"></p>
  
 
     <!-- Optional JavaScript -->
