google maps added
added  after form

--- a/index.html
+++ b/index.html
@@ -170,6 +170,22 @@ function showPosition(position) {
     "<br>Longitude: " + position.coords.longitude;
 }
 </script>
+	  <div id="map" style="width:400px;height:400px;background:yellow"></div>
+
+<script>
+	var lat = position.coords.latitude;
+	vat lgnx = position.coords.longitude;
+function myMap() {
+var mapOptions = {
+    center: new google.maps.LatLng(lat, lgnx),
+    zoom: 10,
+    mapTypeId: google.maps.MapTypeId.HYBRID
+}
+var map = new google.maps.Map(document.getElementById("map"), mapOptions);
+}
+</script>
+
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBu-916DdpKAjTmJNIgngS6HL_kDIKU0aU&callback=myMap"></script>
 
  
 
