--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@ function showPosition(position) {
 	
 function myMap() {
 	var lat = position.coords.latitude;
-	vat lgnx = position.coords.longitude;
+	var lgnx = position.coords.longitude;
 var mapOptions = {
     center: new google.maps.LatLng(lat, lgnx),
     zoom: 10,
