--- a/index.html
+++ b/index.html
@@ -175,10 +175,9 @@ function showPosition(position) {
 <script>
 	
 function myMap() {
-	var lat = position.coords.latitude;
-	var lgnx = position.coords.longitude;
+	
 var mapOptions = {
-    center: new google.maps.LatLng(lat, lgnx),
+    center: new google.maps.LatLng(10, 10),
     zoom: 10,
     mapTypeId: google.maps.MapTypeId.HYBRID
 }
