--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <script>
 (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
-    <title>joobworld</title> </marquee>
+    <title>Maadhab</title> </marquee>
 	    <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
