--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
   </head>
   <body>
-   <marquee><h1>joob world</h1></marquee>
+   <marquee><h1>Maadhab</h1></marquee>
    
     <form name="emp" action="https://codepritesh.github.io/hello.html" onsubmit="return validate_form();" method="post">
         <table align="center" width=40% width="100%" cellspacing="2" cellpadding="2" border="5">
