--- a/index.html
+++ b/index.html
@@ -1,198 +1,22 @@
 <!doctype html>
 <html lang="en">
   <head>
-	  <link rel="icon" href="Newspaper-Jobs.ico" type="image/gif" sizes="16x16">
-  <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<script>
-  (adsbygoogle = window.adsbygoogle || []).push({
-    google_ad_client: "ca-pub-9887824546153830",
-    enable_page_level_ads: true
-  });
-</script>
-<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- add 1 -->
-<ins class="adsbygoogle"
-     style="display:inline-block;width:336px;height:280px"
-     data-ad-client="ca-pub-9887824546153830"
-     data-ad-slot="4078202854"></ins>
-<script>
-(adsbygoogle = window.adsbygoogle || []).push({});
-</script>
-    <title>Maadhab</title> </marquee>
-	    <!-- Required meta tags -->
+    <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
-  <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-111521373-1"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
-  gtag('config', 'UA-111521373-1');
-</script>
-
-<script type="text/javascript">
-        function validate_form() {
-            if (document.emp.emp_name.value == "") {
-                alert("Please fill in the 'Your Employee Name' box.");
-                return false;
-            }
-            if (document.emp.num.value == "") {
-                alert("Enter Employee Number");
-                return false;
-            }
-            alert("sucessfully Submitted");
- 
- 
- 
-            if (!(/^\w+([\.-]?\w+)*@\w+([\.-]?\w+)*(\.\w{2,3})+$/).test(document.emp.email_id.value)) {
-                alert("You have entered an invalid email address!")
-                return (false)
-            }
-        }
- 
-        function isNumberKey(evt) {
-            var charCode = (evt.which) ? evt.which : event.keyCode;
-            if (charCode != 46 && charCode > 31 &&
-                (charCode < 48 || charCode > 57)) {
-                alert("Enter Number");
-                return false;
-            }
-            return true;
-        }
- 
- 
-        //-->
-    </script>
-	
-
-
-
-
-
+    <title>Hello, world!</title>
   </head>
   <body>
-   <marquee><h1>Maadhab</h1></marquee>
-   
-    <form name="emp" action="https://codepritesh.github.io/hello.html" onsubmit="return validate_form();" method="post">
-        <table align="center" width=40% width="100%" cellspacing="2" cellpadding="2" border="5">
-            <tr>
-                <td colspan="2" align="center"><b>Employee Registration Form.</b></td>
- 
-            </tr>
-            <tr>
-                <td align="left" valign="top" width="41%">Employee Name<span style="color:red">*</span></td>
- 
-                <td width="57%"><input type="text" value="" name="emp_name" size="24"></td>
-            </tr>
-            <tr>
-                <td align="left" valign="top" width="41%">Employee Number<span style="color:red">*</span></td>
-                <td width="57%">
-                    <input type="text" value="" name="num" onkeypress="return isNumberKey(event)" size="24"></td>
-            </tr>
-            <tr>
-                <td align="left" valign="top" width="41%">Address</td>
- 
-                <td width="57%"><textarea rows="4" maxlen="200" name="S2" cols="20"></textarea></td>
-            </tr <tr>
- 
-            <td align="left" valign="top" width="41%">Contact Number</td>
-            <td width="57%">
-                <input type="text" value="" onkeypress="return isNumberKey(event)" name="txtFName1" size="24"></td>
-            </tr>
-            <tr>
-                <td align="left" valign="top" width="41%">Job Location</td>
-                <td width="57%"><select name="mydropdown">
-<option value="Default">Default</option>
-<option value="Chennai">Chennai</option>
-<option value="Bangalore">Bangalore</option>
-<option value="Chennai">Pune</option>
-<option value="Bangalore">Mysore</option>
-<option value="Bangalore">Chandigarh</option>
-<option value="Chennai">kolkata</option>
- 
-</select></td>
- 
- 
-            </tr>
- 
-            <tr>
-                <td align="left" valign="top" width="41%">Designation</td>
-                <td width="57%">
-                    <select name="mydropdown">
-<option value="Default">Default</option>
-<option value="Systems Engineer">Systems Engineer</option>
-<option value="Senior Systems Engineer">Senior Systems Engineer</option>
-<option value="Technology Analyst">Technology Analyst</option>
-<option value="Technology Lead">Technology Lead</option>
-<option value="Project Manager">Project Manager</option>
- 
- 
-</select></td>
- 
- 
-            </tr>
-            <tr>
-                <td align="left" valign="top" width="41%">Email<span style="color:red">*</span></td>
-                <td width="57%">
-                    <input type="text" value="" name="email_id" size="24"></td>
-            </tr>
- 
-            <tr>
-                <td colspan="2">
-                    <p align="center">
-                        <input type="submit" value="  Submit" name="B4">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                        <input type="reset" value="  Reset All   " name="B5"></td>
-            </tr>
- 
-        </table>
-    </form>
-	  <button onclick="getLocation()">get your position</button>
-	
-<p id="demo"></p>
-	    <script>
-var x = document.getElementById("demo");
-
-function getLocation() {
-    if (navigator.geolocation) {
-        navigator.geolocation.getCurrentPosition(showPosition);
-    } else { 
-        x.innerHTML = "Geolocation is not supported by this browser.";
-    }
-}
-
-function showPosition(position) {
-    x.innerHTML = "Latitude: " + position.coords.latitude + 
-    "<br>Longitude: " + position.coords.longitude;
-}
-</script>
-	  <div id="map" style="width:400px;height:400px;background:yellow"></div>
-
-<script>
-	
-function myMap() {
-	
-var mapOptions = {
-    center: new google.maps.LatLng(10, 10),
-    zoom: 10,
-    mapTypeId: google.maps.MapTypeId.HYBRID
-}
-var map = new google.maps.Map(document.getElementById("map"), mapOptions);
-}
-</script>
-
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBu-916DdpKAjTmJNIgngS6HL_kDIKU0aU&callback=myMap"></script>
-
- 
+    <h1>Hello, world!</h1>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
   </body>
 </html>
