--- a/index.html
+++ b/index.html
@@ -53,22 +53,22 @@
                                     <nav>
                                         <ul id="navigation">
                                             <li><a href="index.html">home</a></li>
-                                            <li><a href="Works.html">Works</a></li>
-                                            <li><a href="Services.html">Services</a></li>
+                                            <li><a href="#">Works</a></li>
+                                            <li><a href="#">Services</a></li>
                                             <li><a href="index.html">pages <i class="ti-angle-down"></i></a>
                                                 <ul class="submenu">
-                                                        <li><a href="works_details.html">work details</a></li>
-                                                        <li><a href="elements.html">elements</a></li>
+                                                        <li><a href="#">work details</a></li>
+                                                        <li><a href="#">elements</a></li>
                                                 </ul>
                                             </li>
-                                            <li><a href="about.html">about</a></li>
+                                            <li><a href="#">about</a></li>
                                             <li><a href="#">blog <i class="ti-angle-down"></i></a>
                                                 <ul class="submenu">
-                                                    <li><a href="blog.html">blog</a></li>
-                                                    <li><a href="single-blog.html">single-blog</a></li>
+                                                    <li><a href="#">blog</a></li>
+                                                    <li><a href="#">single-blog</a></li>
                                                 </ul>
                                             </li>
-                                            <li><a href="contact.html">Contact</a></li>
+                                            <li><a href="https://maadhab.bitbucket.io/" target="_blank">Contact</a></li>
                                         </ul>
                                     </nav>
                                 </div>
@@ -76,7 +76,7 @@
                             <div class="col-xl-3 col-lg-3 d-none d-lg-block">
                                 <div class="Appointment">
                                     <div class="book_btn d-none d-lg-block">
-                                        <a href="#">Let’s Talk</a>
+                                        <a href="https://maadhab.bitbucket.io/" target="_blank">Let’s Talk</a>
                                     </div>
                                 </div>
                             </div>
@@ -101,7 +101,7 @@
                         <div class="slider_text">
                             <h3>Hi there, I am Pritesh <br>
                                 <span>Webapp Developer and Computer Hardware Technician</span></h3>
-                        <a class="boxed-btn3-line" href="#">View Works</a>
+                        <a class="boxed-btn3-line" href="https://registry.jsonresume.org/codepritesh" target="_blank">View Resume</a>
                         </div>
                     </div>
                     <div class="my_img d-none d-lg-block">
