--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                                                     <li><a href="#">single-blog</a></li>
                                                 </ul>
                                             </li>
-                                            <li><a href="https://maadhab.bitbucket.io/" target="_blank">Contact</a></li>
+                                            <li><a href="https://maadhab.github.io/" target="_blank">Contact</a></li>
                                         </ul>
                                     </nav>
                                 </div>
@@ -76,7 +76,7 @@
                             <div class="col-xl-3 col-lg-3 d-none d-lg-block">
                                 <div class="Appointment">
                                     <div class="book_btn d-none d-lg-block">
-                                        <a href="https://maadhab.bitbucket.io/" target="_blank">Let’s Talk</a>
+                                        <a href="https://maadhab.github.io/" target="_blank">Let’s Talk</a>
                                     </div>
                                 </div>
                             </div>
@@ -198,7 +198,7 @@
                         </h3>
                         <p>Creating and hosting of website(static) or webapp(Dynamic) personal or enterprise. you can also hire me for debuging or enhancement of webapp/website.</p>
                         <div class="">
-                        <a class="text-decoration-none text-info" href="https://maadhab.bitbucket.io/" role="button">maadhab.bitbucket.io</a>
+                        <a class="text-decoration-none text-info" href="https://maadhab.githu.io/" role="button">maadhab.github.io</a>
                         <a class="text-decoration-none text-info" href="https://codepritesh.github.io/" role="button">codepritesh.github.io</a>
                         <a class="text-decoration-none text-info" href="http://maadhab.pythonanywhere.com/" role="button">maadhab.pythonanywhere.com</a>
                         
@@ -421,7 +421,7 @@
                     <div class="col-xl-12">
                         <p class="copy_right text-center">
                             <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://maadhab.bitbucket.io/" target="_blank">Pritesh Maharana</a>
+Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://maadhab.githu.io/" target="_blank">Pritesh Maharana</a>
 <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
                         </p>
                     </div>
