--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
                         </h3>
                         <p>Creating and hosting of website(static) or webapp(Dynamic) personal or enterprise. you can also hire me for debuging or enhancement of webapp/website.</p>
                         <div class="">
-                        <a class="text-decoration-none text-info" href="https://maadhab.githu.io/" role="button">maadhab.github.io</a>
+                        <a class="text-decoration-none text-info" href="https://maadhab.github.io/" role="button">maadhab.github.io</a>
                         <a class="text-decoration-none text-info" href="https://codepritesh.github.io/" role="button">codepritesh.github.io</a>
                         <a class="text-decoration-none text-info" href="http://maadhab.pythonanywhere.com/" role="button">maadhab.pythonanywhere.com</a>
                         
@@ -330,7 +330,7 @@
                                     <div class="col-xl-9 col-md-9">
                                         <div class="single_testmonial">
                                             <p>"He is an excellent teacher, trainer and having exceptional leadership quality,and punctual, 
-                                            from pritesh point of view nothing is impossible. he is the person i know having highist self motivation."
+                                            from pritesh point of view nothing is impossible. he is the person i know having highest self motivation."
                                             </p>
                                             <div class="testmonial_author">
                                                 <div class="thumb">
