--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
     <!-- header-start -->
     <header>
-        <div class="header-area ">
+        <div class="header-area bg-secondary ">
             <div id="sticky-header" class="main-header-area">
                 <div class="container-fluid ">
                     <div class="header_bottom_border">
@@ -94,7 +94,7 @@
 
     <!-- slider_area_start -->
     <div class="slider_area">
-        <div class="single_slider  d-flex align-items-center slider_bg_1">
+        <div class="single_slider  d-flex align-items-center bg-dark  ">
             <div class="container">
                 <div class="row align-items-center position-relative">
                     <div class="col-lg-9">
@@ -113,7 +113,7 @@
     </div>
     <!-- slider_area_end -->
 
-    <div class="download_area">
+    <div class="download_area bg-secondary">
         <div class="container">
             <div class="row">
                 <div class="col-xl-10">
@@ -167,7 +167,7 @@
     </div>
 
     <!-- service_area start  -->
-    <div class="service_area">
+    <div class="service_area bg-dark">
         <div class="container">
             <div class="row">
                 <div class="col-xl-12">
@@ -226,7 +226,7 @@
     <!-- service_area end  -->
 
     <!-- gallery_area start  -->
-    <div class="gallery_area">
+    <div class="gallery_area bg-secondary">
         <div class="container">
             <div class="row">
                 <div class="col-xl-12">
@@ -293,7 +293,7 @@
     <!-- gallery_area end  -->
 
         <!-- testimonial_area  -->
-        <div class="testimonial_area ">
+        <div class="testimonial_area  bg-dark">
             <div class="container">
                 <div class="row">
                     <div class="col-xl-12">
@@ -375,7 +375,7 @@
     
 
     <!-- footer start -->
-    <footer class="footer">
+    <footer class="footer bg-secondary">
         <div class="footer_top">
             <div class="container">
                 <div class="row">
