--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                         <p>I have a master degree in Computer Application from Ravenshaw University.I have built a IOT project that can control water level, Motion Sensor light for theft detection and all data upload to a cloud platform so that you can watch at real time any where in the world.  
                         </p>
                         <p>I am an enthusiastic trainer having 1 year experience of teaching in a diploma engineering college, where i was teaching computer science and computer hardware lab. I am also a ITAC certified trainer for tecnical skill teaching and supervising. I have 1 year experience in teaching computer hardware repairing and troubleshooting in a reputed computer hardware training institute.</p>
-                        <a href="https://github.com/Maadhab/maadhab.github.io/raw/master/curiculamVita.pdf" class="boxed-btn3-line" target="_blank" >Download CV</a>
+                        <a href="https://github.com/codepritesh/codepritesh.github.io/raw/master/cvpritesh.pdf" class="boxed-btn3-line" target="_blank" >Download CV</a>
                     </div>
                 </div>
                 <div class="col-lg-5 offset-lg-1 col-md-6">
@@ -199,10 +199,11 @@
                         <p>Creating and hosting of website(static) or webapp(Dynamic) personal or enterprise. you can also hire me for debuging or enhancement of webapp/website.</p>
                         <div class="">
                         <a class="text-decoration-none text-info" href="https://maadhab.github.io/" role="button">maadhab.github.io</a>
+                            <a class="text-decoration-none text-info" href="https://maadhab.bitbucket.io/" role="button">maadhab job services website</a>
                         <a class="text-decoration-none text-info" href="https://codepritesh.github.io/" role="button">codepritesh.github.io</a>
                         <a class="text-decoration-none text-info" href="http://maadhab.pythonanywhere.com/" role="button">maadhab.pythonanywhere.com</a>
                         
-                        <a class="text-decoration-none text-info" href="https://maadhab.bitbucket.io/" role="button">maadhab.bitbucket.io</a>
+                        
                         <a class="text-decoration-none text-info" href="https://registry.jsonresume.org/codepritesh" role="button">registry.jsonresume.org/codeprites</a> 
                         </div>
                     </div>
