--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                         <p>I have a master degree in Computer Application from Ravenshaw University.I have built a IOT project that can control water level, Motion Sensor light for theft detection and all data upload to a cloud platform so that you can watch at real time any where in the world.  
                         </p>
                         <p>I am an enthusiastic trainer having 1 year experience of teaching in a diploma engineering college, where i was teaching computer science and computer hardware lab. I am also a ITAC certified trainer for tecnical skill teaching and supervising. I have 1 year experience in teaching computer hardware repairing and troubleshooting in a reputed computer hardware training institute.</p>
-                        <a href="https://github.com/codepritesh/codepritesh.github.io/raw/master/cvpritesh.pdf" class="boxed-btn3-line" target="_blank" >Download CV</a>
+                        <a href="https://github.com/codepritesh/codepritesh.github.io/raw/master/cvpritesh.pdf" class="boxed-btn3-line" target="_blank" >Download my CV</a>
                     </div>
                 </div>
                 <div class="col-lg-5 offset-lg-1 col-md-6">
