google add added
google add added

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                     <div class="col-lg-9">
                         <div class="slider_text">
                             <h3>Hi there, I am Pritesh <br>
-                                <span>Webapp Developer and Computer Hardware Technician</span></h3>
+                                <span>Fullstack Developer</span></h3>
                         <a class="boxed-btn3-line" href="https://registry.jsonresume.org/codepritesh" target="_blank">View Resume</a>
                         </div>
                     </div>
@@ -463,9 +463,9 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
     <script src="js/jquery.form.js"></script>
     <script src="js/jquery.validate.min.js"></script>
     <script src="js/mail-script.js"></script>
-
-
     <script src="js/main.js"></script>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9887824546153830"
+     crossorigin="anonymous"></script>
 </body>
 
 </html>
